--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.5.5",
+    "lucide-react": "^0.446.0",
     "next": "14.2.12",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "sass": "^1.79.1",
-    "scss": "^0.2.4"
+    "scss": "^0.2.4",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
